# Indemind-SDK

./: README.md
python/: .gitignore  README.md  pyproject.toml  setup.py
python/examples/: stream_stereo_imu.py
python/pyindemind/: __init__.py
python/pyindemind/opencv_compat/: libopencv_calib3d.so.3.4.20  libopencv_videoio.so.3.4.20
python/src/: bindings.cpp
